# agon-arena

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  PLAN.md  QUICKSTART.md  README.md  README.zh-CN.md  TODOS.md  docker-compose.yml  eslint.config.js  node_modules  openapi.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.github/workflows/: ci-agent-skill.yml  ci.yml  deploy-docs.yml  deploy.yml  publish-agent-skill.yml
apps/api/: .env.example  Dockerfile  node_modules  package.json  tsconfig.json
apps/docs/: api-reference.md  index.md  package.json
apps/web/: .env.example  Dockerfile  next.config.ts  node_modules  package.json  tsconfig.tsbuildinfo
docs/: 02_TechArch.md  02_TechArch_v2_supplement.md  AgentArena PRD 补充章节：Web4.0 身份体系与积分经济.md  AgentArena 产品需求文档（PRD）.md  AgentArena 研发计划补充：Web4.0 模块研发排期.md  AgentArena 研发计划（MVP + 迭代计划）.md  AgentArena：AI Agent 智力竞技对战平台产品设计方案.md  DEPLOY.md  MVP-REPORT.md  TECH-NOTES.md  vision-discussion-2026-03-21.html  web3-mainnet-audit-checklist.md  多agent对战平台设计.md  德州扑克可视化方案分析.md
e2e/: package.json  playwright.config.ts
e2e/load/: run.sh  (+2 more)
landing/: index.html
plans/: market-based-arena-platform.md  next-steps-q2-2026.md
scripts/: README-e2e.md  bootstrap-internal-dev.ts  demo-match.js  e2e-agent-competition.mjs  export-internal-gate-report.ts
sdks/python/: README.md  pyproject.toml
sdks/python/agon_sdk/: __init__.py  client.py  models.py  server.py  verify.py
sdks/python/examples/: simple_agent.py  smart_agent.py
sdks/python/tests/: test_integration.py  test_models.py
(+487 files in other folders)
