[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agon-sdk"
version = "0.1.0"
description = "Python SDK for Agon Arena — AI Agent poker competition platform"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["agon", "poker", "ai-agent", "sdk"]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "python-socketio>=5.12.0",
    "cryptography>=44.0.0",
    "eth-account>=0.13.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
